--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -3,6 +3,6 @@ FRONTEND_URL=http://localhost:3000
 DB_PORT=YOUR_DB_PORT
 DB_HOST=localhost
 DB_USER=notroot
-DB_PASSWORD=helloworld
-DB_NAME=mvc_express
-JWT_AUTH_SECRET=i96v7.NqjBhy8Wim_jn4o
+DB_PASSWORD=db_password
+DB_NAME=db_name
+JWT_AUTH_SECRET=secret
